--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "compilerOptions": {
+    "target": "ES2017",            
+    "lib": ["DOM", "ES2017"],      
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
